--- a/examples/ipv6/nclients/omnetpp.ini
+++ b/examples/ipv6/nclients/omnetpp.ini
@@ -39,10 +39,10 @@ tkenv-plugin-path = ../../../etc/plugins
 **.srv.app[*].typename = "TcpGenericServerApp"
 **.srv.app[0].localAddress = ""
 **.srv.app[0].localPort = 1000
-**.srv.app[0].replyDelay = 0
+**.srv.app[0].replyDelay = 0s
 #**.srv.app[1].localAddress=""  #created another one but unused for now
 #**.srv.app[1].localPort=3168
-#**.srv.app[1].replyDelay = 0
+#**.srv.app[1].replyDelay = 0s
 
 # tcp settings
 **.app[*].dataTransferMode = "object"
